--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,6 @@ jobs:
       matrix:
         ruby:
           - '3.2.2'
-
     steps:
     - uses: actions/checkout@v3
     - name: Set up Ruby
@@ -23,5 +22,7 @@ jobs:
       with:
         ruby-version: ${{ matrix.ruby }}
         bundler-cache: true
+    - name: Invoke cli
+      run: bundle exec sdr-cli --help
     - name: Run the default task
       run: bundle exec rake
